--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Western stories'
 - !lcc 'PS'
+- GITenberg
 title: Desert Conquest; or, Precious Waters
 url: http://www.gutenberg.org/ebooks/25728
